OpenSCAD 2011.06
================

Bugfix release:

o Cylinder tesselation broke existing models which are using cylinders
  for e.g. captured nut slots and are dependent on the orientation not
  changing.
o DXF output couldn't be imported into e.g. AutoCAD and Solidworks after updating
  to using the AutoCAD 2000 (AC1015) format. Reverted to the old entity-only output,
  causing LWPOLYLINES to not exported allowed anmore.

OpenSCAD 2011.04
================

o Added hull() for convex hulls (2D object only)
o minkowski() now supports 2D objects
o Added functions: rands(), sign()
o Now supports escaping of the following characters in strings: \n, \t, \r, \\, \"
o Support nested includes
o Improved parsing of numbers
o DXF: output LWPOLYLINE instead of just LINE entities
o Bugfixes: More robust DXF export, setting $fs/$fa to 0 caused a crash
o Some bugs fixed, maybe some new bugs added

OpenSCAD 2010.05
================

 o Added functions and statements
  - Added abs() function
  - Added exp(x), log(b, x), log(x) and ln(x) functions
  - Added minkowski() statement for 3d minkowski sums
 o Added 'include <filename>' and 'use <filename>' statements
  - Old implicit '<filename>' include statement is now obsolete
 o Some bugs fixed, maybe some new bugs added

OpenSCAD 2010.02
================

 o Added functions and statements
  - Added sqrt() function
  - Added round(), ceil() and floor() functions
  - Added lookup() function for linear interpolation in value list
  - Added projection(cut = true/false) statement
  - Added child() statement for accessing child nodes of module instances
  - Added mirror() statement
 o Improved DXF import code (more entities and some bugs fixed)
 o Added feature for dumping animation as PNG files
 o Added a preferences dialog
 o Now using CGAL's delaunay tesselator
 o Now using eigen2 for linear algebra
 o Reorganisation of the source tree
 o Some bugs fixed, maybe some new bugs added

OpenSCAD 2010.01
================
